--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,121 +1,85 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+.padding {
+    padding: 100px;
 }
-
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.homeTitle {
+    padding-bottom: 20px;
 }
-
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.leftAlign {
+    text-align: left;
 }
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
+.carousel {
+    display: flex;
+    align-items: center;
+    justify-content: center;}
 .card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
+    margin: 25px;
+    padding: 10px;
+    box-shadow:
+    0 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.028),
+    0 12.5px 10px rgba(0, 0, 0, 0.035),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.042),
+    0 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    0 100px 80px rgba(0, 0, 0, 0.01)
+  
 }
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.cardSection {
+    padding: 100px 50px
 }
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+.dot, .dot2, .dot3 {
+    height: 75px;
+    width: 75px;
+    border-radius: 50%;
+    display: inline-block;
+    padding-top: 24px;
   }
+  .dot{
+  background-color: #e3ffe7;
+  }
+  .dot2{
+  background-color: #DFF4F2;
+  }
+  .dot3{
+  background-color: #d9e7ff;
+  }
+.paddingBottom {
+    padding-bottom: 30px;
+}
+.contactCard {
+    margin: 25px;
+    padding: 10px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 2px 24px 0px rgba(0,0,0,0.87); 
+    box-shadow: 0px 2px 24px 0px rgba(0,0,0,0.87);
+}
+.contactIcon {
+    margin-right: 10px;
+    margin-top: 10px;
+}
+
+
+@media (max-width: 1000px) {
+    .padding{
+        padding: 50px 25px;   
+    }
+}
+@media (max-width: 950px) {
+    .card {
+    margin: 0;
+    margin-top: 50px;
+    }
+}
+@media (max-width: 700px) {
+    .cardSection{
+        padding: 50px;
+    }
+}
+@media (max-width: 500px) {
+    .cardSection{
+        padding: 25px 25px 50px;
+    }
+    .contactCard {
+    margin: 20px 0;
+    }
 }
