--- a/styles/globals.css
+++ b/styles/globals.css
@@ -396,6 +396,9 @@ a:hover {
 .green-text {
   color: rgb(34, 199, 34);
 }
+.form-input {
+  border-radius: 25px;  
+}
 
 @media (max-width:767px) {
 
