--- a/styles/globals.css
+++ b/styles/globals.css
@@ -376,7 +376,7 @@ a:hover {
 
 .footer-custom {
   text-align: center;
-  background-color: #949494;
+  background-color: #434343;
   color: white;
   padding-top: 2%;
   padding-bottom: 2%;
@@ -384,7 +384,7 @@ a:hover {
 }
 
 .footer-text {
-  color: #9a9a9a;
+  color: #d2d2d2;
 }
 
 .footerlink {
