--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,9 +28,15 @@ h3 {
   font-size: 1.75rem;
   margin: 0 0 10px 0;
 }
+strong { font-weight: bold; }
 
 .wrapper {
   max-width: 1440px;
+  margin-right: auto;
+  margin-left: auto;
+}
+.wrapper-small {
+  max-width: 1100px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -426,8 +432,63 @@ a:hover {
   background: -webkit-linear-gradient(135deg, #c6ffcf 0%, #bdd5ff 100%);
   background-clip: inherit;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;}
+  -webkit-text-fill-color: transparent;
+}
 
+  .pad-top {
+    padding: 25px
+}
+.blog-card{
+  margin:10px 25px;
+  border-radius:25px;
+  background-color: #ffffff;
+  box-shadow: 4px 2px 17px 10px rgba(0,0,0,0.18);
+  padding: 20px 20px 3px;
+  text-align: left;
+  transform: translateY(0px);
+  transition: all .4s ease-in-out;
+  min-height: 322px;
+  position: relative
+}
+.blog-pad-bot {
+  padding-bottom: 20px
+}
+.bottom-left{ 
+  position: absolute;
+  left:0;
+  bottom:0;
+  padding-left: 20px
+}
+.blog-card:hover{
+  transform: translateY(-10px);
+
+}
+.blog-card-title{
+  font-size: 1.2rem
+}
+.blog-pad {
+  padding: 50px 15px;
+  text-align: left
+}
+.lineBreak {
+  display: block;
+   margin: 10px 0;
+   line-height:22px;
+   content: " ";
+}
+.blog-text {
+  font-size: 1.5rem
+}
+.blog-sub {
+  padding: 10px 0;
+}
+.blog-img {
+  padding:20px 0;
+  text-align: center;
+}
+.blog-link {
+  text-decoration: underline
+}
   .home-button{
     background: linear-gradient(135deg, #c6ffcf 0%, #bdd5ff 100%) !important;
     
@@ -442,6 +503,9 @@ a:hover {
   }
   .asH2 {
     font-size: calc(1.325rem + .9vw);
+  }
+  .nav-pad {
+    padding: 0 20px
   }
   @media (min-width:1200px) {
     .asH2 {
@@ -521,6 +585,7 @@ a:hover {
   .mobile-break {
     display: none;
   }
+  
 }
 
 @media (min-width: 992px) {
@@ -575,6 +640,10 @@ a:hover {
   .home-title {
     padding-top: 15vh;
   }
+  .blog-card{
+    margin:10px 0;
+  }
+  
 
 
   .contact-div {
