--- a/styles/globals.css
+++ b/styles/globals.css
@@ -551,7 +551,7 @@ a:hover {
     padding-top: 20px;
     padding-bottom: 50px;
     padding-right: 50px;
-    padding: 10px 50px 50px
+    padding: 12px 50px 50px 0
   }
 
 }
