--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,8 +42,8 @@ strong { font-weight: bold; }
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  color: inherit !important;
+  text-decoration: none !important;
 }
 
 a:hover {
@@ -626,8 +626,8 @@ a:hover {
 
 @media (min-width: 992px) {
   .margin-auto {
-    margin-top: auto;
-    margin-bottom: auto;
+    margin-top: auto !important;
+    margin-bottom: auto !important;
   }
 }
 
@@ -650,7 +650,7 @@ a:hover {
   }
 
   .margin-top {
-    margin-top: auto;
+    margin-top: auto !important;
   }
 
   .bespoke-title {
