--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,13 +20,13 @@ h6 {
 }
 
 h1 {
-  font-size: 2.5rem;
-  margin: 0 0 10px 0;
+  font-size: 2.5rem !important;
+  margin: 0 0 10px 0 !important;
 }
 
 h3 {
-  font-size: 1.75rem;
-  margin: 0 0 10px 0;
+  font-size: 1.75rem !important;
+  margin: 0 0 10px 0 !important;
 }
 strong { font-weight: bold; }
 
