website with tailwind

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,713 +1,60 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 body,
 html {
   text-align: center;
   box-sizing: border-box;
-  font-weight: 300 !important;
-  font-family: 'Roboto', sans-serif !important;
+  font-weight: 300;
+  font-family: 'Roboto', sans-serif;
   background-color: #ffffff;
   margin: 0;
 }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 300 !important;
-}
-
-h1 {
-  font-size: 2.5rem !important;
-  margin: 0 0 10px 0 !important;
-}
-
-h3 {
-  font-size: 1.75rem !important;
-  margin: 0 0 10px 0 !important;
-}
-strong { font-weight: bold; }
-
-.wrapper {
-  max-width: 1440px;
-  margin-right: auto;
-  margin-left: auto;
-}
-.wrapper-small {
-  max-width: 1100px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-a {
-  color: inherit !important;
-  text-decoration: none !important;
-}
-
-a:hover {
-  color: inherit;
-}
-
-.grey-text {
-  color: #555555;
-}
-
-.logo-img {
-  height: 32px;
-  width: 200px
-}
-
-.justify {
-  text-align: justify;
-  -moz-text-align-last: center;
-  text-align-last: center;
-}
-
-.center {
-  text-align: center;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.gradient-section {
-  background-color: #d9e7ff;
-  background: linear-gradient(135deg, #e3ffe7 0%, #d9e7ff 100%);
-  display: flex;
-  position: relative;
-}
-
-.gradient-section-horizontal {
-  background-color: #d9e7ff;
-  background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
-  display: flex;
-  position: relative;
-}
-.navbar {
-  z-index: 999;
-}
-
-.home-top {
-  text-align: left;
-  color: rgb(46, 46, 46);
-  position: relative;
-  background-image: url("/images/LandingPageTrial.svg");
+.home-top{
+  background-image: url("/images/FreelanceWebDesignKent.svg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  padding-left: 10%;
-  overflow: hidden;
-  margin-top: -58px;
 }
-.home-title {
-  padding-top: 40vh;
-  padding-bottom: 40vh;
+.hero, .home-top {
+  min-height: 100vh;
 
 }
-
-.mobile-svg {
-  height: 100%;
-  width: 100%;
-  max-width: 400px;
-  transform: rotate(10deg);
-}
-.svg-image {
-  text-align: center;
-}
-
-.btn {
-  line-height: 35px !important;
-  height: 50px;
-  text-align: center;
-  width: 250px;
-  cursor: pointer;
-}
-
-.btn:hover {
-  color: white
-}
-
-.btn-color {
-  color: #FFF;
-  transition: all 0.3s;
-  position: relative;
-}
-
-.btn-color-two {
-  color: rgb(36, 36, 36);
-  transition: all 0.3s;
-  position: relative;
-}
-
-.btn-one span {
-  transition: all 0.3s;
-}
-
-.btn-one::before {
-  content: '';
+.wave-bottom, .wave-top {
   position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  opacity: 0;
-  transition: all 0.3s;
-  border-top-width: 1px;
-  border-bottom-width: 1px;
-  border-top-style: solid;
-  border-bottom-style: solid;
-
-  transform: scale(0.1, 1);
-}
-
-.btn-color::before {
-  border-top-color: rgba(255, 255, 255, 0.5);
-  border-bottom-color: rgba(255, 255, 255, 0.5);
-}
-
-.btn-color-two::before {
-  border-top-color: rgba(34, 34, 34, 0.5);
-  border-bottom-color: rgba(34, 34, 34, 0.5);
-}
-
-.btn-color-two:hover {
-  color: #000000;
-}
-
-.btn-one:hover span {
-  letter-spacing: 2px;
-}
-
-.btn-one:hover::before {
-  opacity: 1;
-  transform: scale(1, 1);
-}
-
-.btn-one::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  transition: all 0.3s;
-}
-
-.btn-color::after {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-.btn-color-two::after {
-  background-color: rgba(255, 255, 255, 0.4);
-}
-
-.btn-one:hover::after {
-  opacity: 0;
-  transform: scale(0.1, 1);
-}
-
-
-.cta {
-  position: relative;
-  margin: auto;
-  padding: 19px 22px;
-  transition: all .2s ease;
-}
-
-.cta:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  border-radius: 28px;
-  background: rgba(133, 158, 222, 0.5);
-  width: 56px;
-  height: 56px;
-  transition: all .3s ease;
-}
-
-.cta span {
-  position: relative;
-  font-size: 16px;
-  line-height: 18px;
-  font-weight: 900;
-  letter-spacing: .25em;
-  text-transform: uppercase;
-  vertical-align: middle;
-}
-
-.cta svg {
-  position: relative;
-  top: 0;
-  margin-left: 10px;
-  fill: none;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke: #111;
-  stroke-width: 2;
-  transform: translateX(-5px);
-  transition: all .3s ease;
-}
-
-.cta:hover:before {
-  width: 100%;
-  background: #4d67fa;
-}
-
-.cta:hover svg {
-  transform: translateX(0);
-}
-
-.cta:active {
-  transform: scale(0.96);
-}
-
-.carousel-indicators,
-.carousel-control-next,
-.carousel-control-prev {
-  filter: invert(100%) !important;
-}
-
-.custom-shape-divider-bottom-1613987531 {
-  position: absolute;
-  bottom: -1px;
-  left: 0;
   width: 100%;
   overflow: hidden;
   line-height: 0;
-  transform: rotate(180deg);
 }
-
-.custom-shape-divider-bottom-1613987531 svg {
+.wave-bottom{
+  transform: rotate(180deg);
+  bottom: -1px;
+  left: 0;
+}
+.wave-bottom svg, .wave-top svg {
   position: relative;
   display: block;
   width: calc(134% + 1.3px);
   height: 68px;
 }
-
-.custom-shape-divider-bottom-1613987531 .shape-fill {
-  fill: #FFF;
-}
-
-.custom-shape-divider-top-1613991006 {
-  position: absolute;
+.wave-top {
   top: 0;
   left: 0;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
 }
-
-.custom-shape-divider-top-1613991006 svg {
-  position: relative;
-  display: block;
-  width: calc(134% + 1.3px);
-  height: 46px;
+.wave-top svg {
   transform: rotateY(180deg);
 }
-
-.custom-shape-divider-top-1613991006 .shape-fill {
+.blog p {
+  padding-bottom: 8px
+}
+.wave-top, .wave-bottom .shape-fill {
   fill: #FFFFFF;
 }
 
-.card-title {
-  margin: 0;
-}
-.code {
-  background-color: #202020;
-  color: #ffffff;
-  font-size: 1rem;
-  padding-left: 20px;
-  border-radius: 20px
-}
-.element {
-  color: #569CD6
-}
-.vs-class{
-  color: #9CDCFE
-}
-.comment {
-  color: #4B8B3A
-}
-.string {
-  color: #C38248
-}
-.number-vs {
-  color: #B5CEA8
-}
-.vs-class-gold {
-  color: #D9E577
-}
-
-.rowReverse {
-  flex-direction: row-reverse;
-  align-content: center;
-}
-
-.left-align {
-  text-align: justify;
-}
-
-.seoTop,
-.pic-left,
-.left {
-  text-align: left;
-}
-
-.middleRow {
-  padding: 50px 0;
-}
-
-.clip-icon {
-  padding-left: 8px;
-}
-
-.code-icon {
-  padding-right: 3px;
-}
-
-.speech-icon {
-  padding-left: 2px;
-}
-
-.text-right {
-  text-align: right;
-}
-
-
-.stacking-slide {
-  height: 100vh;
-  width: 100%;
-  position: sticky;
-  top: 0;
-  box-shadow: 0 0px 50px -12px rgba(0, 0, 0, 0.25);
-}
-
-.color1 {
-  background-color: #e3ffe7;
-}
-
-.color2 {
-  background-color: #e0f9ed;
-}
-
-.color3 {
-  background-color: #dceef8;
-}
-
-.color4 {
-  background-color: #d9e7ff;
-}
-
-.footer-custom {
-  text-align: center;
-  background-color: #434343;
-  color: white;
-  padding-top: 2%;
-  padding-bottom: 2%;
-  z-index: 9999;
-}
-
-.footer-text {
-  color: #d2d2d2;
-}
-
-.footerlink {
-  padding: 0 10px 0 35px;
-}
-
-.terms-pad {
-  padding: 75px;
-  text-align: left;
-
-}
-
-.contact-div {
-  background-color: #ffffff;
-  background: linear-gradient(0deg, #f2f2f2 0%, #fff 100%);
-  padding: 50px 40px;
-}
-
-.input-fax {
-  display: none !important;
-}
-
-.green-text {
-  color: rgb(34, 199, 34);
-}
-.form-input {
-  border-radius: 25px !important;  
-}
-.fourzerofour {
-  min-height: 100vh;
-}
-.fourzerofourcard {
-  background-color: #ffffff;
-  padding: 50px;
-}
-.four-title {
-  font-size: 20rem;
-  color: #d9e7ff;
-  background: -webkit-linear-gradient(135deg, #c6ffcf 0%, #bdd5ff 100%);
-  background-clip: inherit;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-  .pad-top {
-    padding: 25px
-}
-.blog-card{
-  margin:10px 25px;
-  border-radius:25px;
-  background-color: #ffffff;
-  box-shadow: 4px 2px 17px 10px rgba(0,0,0,0.18);
-  padding: 20px 20px 3px;
-  text-align: left;
-  transform: translateY(0px);
-  transition: all .4s ease-in-out;
-  min-height: 322px;
-  position: relative
-}
-.blog-title {
-  text-align: left;
-  color: rgb(46, 46, 46)
-}
-.blog-sub {
-  font-size: 1.2rem
-}
-.blog-pad-bot {
-  padding-bottom: 20px
-}
-.bottom-left{ 
-  position: absolute;
-  left:0;
-  bottom:0;
-  padding-left: 20px
-}
-.blog-card:hover{
-  transform: translateY(-10px);
-
-}
-.blog-card-title{
-  font-size: 1.2rem
-}
-.blog-pad {
-  padding: 50px 15px;
-  text-align: left
-}
-.lineBreak {
-  display: block;
-   margin: 10px 0;
-   line-height:22px;
-   content: " ";
-}
-.blog-text {
-  font-size: 1.5rem
-}
-.blog-sub {
-  padding: 10px 0;
-}
-.blog-img {
-  padding:20px 0;
-  text-align: center;
-}
-.blog-link {
-  text-decoration: underline
-}
-  .home-button{
-    background: linear-gradient(135deg, #c6ffcf 0%, #bdd5ff 100%) !important;
-    
-  }
-  .home-button, .contactme-button {
-    color: #000000;
-    border: 0;
-    margin-top: 10px;
-  }
-  .contactme-button {
-    background: linear-gradient(135deg, #ff9f9f 0%, #ff0000 100%);
-  }
-  .asH2 {
-    font-size: calc(1.325rem + .9vw);
-  }
-  .nav-pad {
-    padding: 0 20px
-  }
-  @media (min-width:1200px) {
-    .asH2 {
-      font-size: 2rem;
-    }
-  }
-
-@media (max-width:767px) {
-
-  .content-desktop {
-    display: none;
-  }
-
-  .footerlink {
-    padding: 0;
-    text-align: right !important;
-  }
-
-  .nav-link, .right-align  {
-    text-align: right !important;
-  }
-
-  .terms-pad {
-    padding: 75px 20px;
-  }
-  .four-title {
-    font-size: 10rem;
-  }
-  .home-title {
-    padding-top: 10vh;
-    padding-bottom: 10px;
-    text-align: center;
-  }
-  .home-top {
-    padding-left: 0;
-  }
-  .mobile-svg {
-    max-width: 350px;
-   
-    transform: rotate(0deg);
-  }
-  .svg-image {
-    padding-top: 20px;
-    padding-bottom: 50px;
-    padding-right: 50px;
-    padding: 12px 50px 50px 0
-  }
-
-}
-
-@media (min-width: 768px) {
-  .nav-link {
-    position: relative;
-    ;
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-    margin-left: 0.5rem !important;
-    margin-right: 0.5rem !important;
-  }
-
-  .nav-link:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #636363;
-    visibility: hidden;
-    transform: scaleX(0);
-    transition: all 0.3s ease-in-out;
-  }
-
-  .nav-link:hover:before {
-    visibility: visible;
-    transform: scaleX(1);
-  }
-}
-
-@media screen and (min-width: 600px) {
-  .mobile-break {
-    display: none;
-  }
-  
-}
-
-@media (min-width: 992px) {
-  .margin-auto {
-    margin-top: auto !important;
-    margin-bottom: auto !important;
-  }
-}
-
-@media (min-width: 1444px) {
-  
-  .home-title {
-    padding-top: 30vh;
-    padding-bottom: 30vh;
-  }
-}
-
-@media (max-width: 991px) {
-  .pic-left {
-    text-align: center;
-    padding-top: 20px;
-  }
-
-  .margin-bottom {
-    margin-bottom: auto;
-  }
-
-  .margin-top {
-    margin-top: auto !important;
-  }
-
-  .bespoke-title {
-    margin: 0;
-  }
-}
-
-@media (max-width: 1200px) {
-  .home-top {
-    background-attachment: scroll;
-  }
-
-}
-
-@media (max-width:650px) {
-  .macImg {
-    background-image: url("/images/Freelance-Web-Design-Mobile.jpg");
-  }
-
-  .home-top {
-    padding:  10px 0;
-  }
-  .home-title {
-    padding-top: 15vh;
-  }
-  .blog-card{
-    margin:10px 0;
-  }
-  .contact-div {
-    padding: 30px 10px 50px;
-  }
-}
-
-@media (max-width:500px) {
-  .contact-button {
-    width: 100% !important;
-  }
-  .four-title {
-    font-size: 7rem;
-  }
-  .home-button, .contactme-button {
-    max-width: 50%;
-  }
-  .fourzerofourcard {
-  padding: 5px;
-  min-height: 5vh;
-  }
-  .nav-pad {
-    padding: 0 5px
-  }
-  .pad-top {
-    padding: 5px
-}
-}
-
-@media (max-width:950px) {
-  .card-group {
-    display: block;
+@media (min-width: 1441px) {
+  .home-top, .hero {
+    min-height: 75vh;
   }
 }
