--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,10 +49,32 @@ html {
 .blog p {
   padding-bottom: 8px
 }
-.wave-top, .wave-bottom .shape-fill {
-  fill: #FFFFFF;
-}
+/* .wave-top, .wave-bottom .shape-fill {
+  fill: inherit;
+}*/
 
+@layer components {
+  .markdown-content p, h2 {
+  @apply mb-4
+  }
+  .markdown-content a {
+  @apply underline hover:text-blue-600
+  }
+  .markdown-content h2 {
+  @apply text-3xl
+  }
+  .markdown-content ul {
+  @apply list-disc list-inside mb-2
+  }
+  .markdown-content ol {
+  @apply list-decimal list-inside mb-2
+  }
+}
+@media (prefers-color-scheme: dark) {
+  .home-top{
+  background-image: url("/images/FreelanceWebDesignKentDark.svg");
+  }
+}
 @media (min-width: 1441px) {
   .home-top, .hero {
     min-height: 75vh;
